[package]
name = "libracerd"
version = "0.3.3"
authors = ["Joe Wilm <joe@jwilm.com>"]

build = "build.rs"

[dependencies]
bodyparser = "0.4.1"
docopt = "0.6"
env_logger = "0.3"
hyper = { version = "0.9", default-features = false }
iron = { version = "0.4", default-features = false }
iron-hmac = { version = "0.4", features = ["hmac-rust-crypto"] }
log = "0.3"
logger = "0.1.0"
persistent = "0.2"
racer = "2.0.10"
rand = "0.3"
regex = "0.1"
router = "0.2.0"
rustc-serialize = "0.3"
serde = "0.8"
serde_json = "0.8"

[dev-dependencies]
rust-crypto = "0.2.36"

[build-dependencies]
serde_codegen = "0.8"
