[package]
name = "libracerd"
version = "0.3.3"
authors = ["Joe Wilm <joe@jwilm.com>"]

[dependencies]
bodyparser = "0.7"
docopt = "0.8"
env_logger = "0.4"
hyper = { version = "0.11", default-features = false }
iron = { version = "0.5", default-features = false }
iron-hmac = { version = "0.5", features = ["hmac-rust-crypto"] }
log = "0.3"
logger = "0.3"
persistent = "0.3"
racer = "2.0.10"
rand = "0.3"
regex = "0.2"
router = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
reqwest = "0.8"
rust-crypto = "0.2.36"
rustc-serialize = "0.3"
