[package]
name = "libracerd"
version = "0.3.3"
authors = ["Joe Wilm <joe@jwilm.com>"]

[dependencies]
bodyparser = "0.8"
docopt = "1"
env_logger = "0.5"
iron = { version = "0.6", default-features = false }
iron-hmac = { version = "0.6", features = ["hmac-rust-crypto"] }
log = "0.4"
logger = "0.4"
persistent = "0.4"
racer = "2.1"
rand = "0.5"
regex = "1"
router = "0.6.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
rls-span = "0.5"

[dev-dependencies]
rust-crypto = "0.2.36"
rustc-serialize = "0.3"
hyper = { version = "0.10", default-features = false }
